--- a/index.html
+++ b/index.html
@@ -5,35 +5,131 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
 
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NSGRTJCNQZ"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google Analytics (paste your tag here) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=YOUR_GOOGLE_ANALYTICS_ID"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-  gtag('config', 'G-NSGRTJCNQZ');
-</script>
+        gtag('config', 'G-NSGRTJCNQZ');
+    </script>
 
-    
     <style>
+        /* Basic Styling */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             background-color: #f4f4f4;
+        }
+
+        header {
+            background-color: #333;
+            color: white;
+            padding: 20px;
             text-align: center;
         }
-        h1 {
+
+        nav {
+            background-color: #444;
+            text-align: center;
+            padding: 10px 0;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            padding: 10px 20px;
+            display: inline-block;
+        }
+
+        nav a:hover {
+            background-color: #555;
+        }
+
+        section {
+            padding: 40px 20px;
+            margin: 20px 0;
+        }
+
+        h2 {
+            text-align: center;
             color: #333;
         }
-        p {
-            color: #555;
+
+        .cta-button {
+            display: inline-block;
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 20px;
+            margin: 10px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 18px;
+        }
+
+        .cta-button:hover {
+            background-color: #0056b3;
+        }
+
+        footer {
+            text-align: center;
+            background-color: #333;
+            color: white;
+            padding: 20px 0;
+        }
+
+        /* Mobile-friendly design */
+        @media (max-width: 768px) {
+            nav a {
+                display: block;
+                padding: 10px;
+            }
+
+            section {
+                padding: 20px 10px;
+            }
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website!</h1>
-    <p>This is a simple website hosted on GitHub Pages.</p>
+
+    <header>
+        <h1>Welcome to My Website!</h1>
+    </header>
+
+    <!-- Navigation -->
+    <nav>
+        <a href="#section1">Go to Section 1</a>
+        <a href="#section2">Go to Section 2</a>
+    </nav>
+
+    <!-- Section 1 -->
+    <section id="section1">
+        <h2>Section 1</h2>
+        <p>This is the first section of the website. It provides information about a topic of interest. You can customize this text to whatever content you want to display here.</p>
+        <a href="#signup" class="cta-button">Sign Up Now</a>
+    </section>
+
+    <!-- Section 2 -->
+    <section id="section2" style="background-color: #e9e9e9;">
+        <h2>Section 2</h2>
+        <p>This is the second section of the website. It contains more details or features that your visitors will find useful. Customize this content as needed.</p>
+        <a href="#signup" class="cta-button">Join Us Here</a>
+    </section>
+
+    <!-- Signup Call-to-Action -->
+    <section id="signup" style="background-color: #ddd; text-align: center;">
+        <h2>Sign Up for More Information</h2>
+        <p>Provide your details below to stay updated with the latest news and offers!</p>
+        <button class="cta-button">Sign Up Now</button>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 My Website. All rights reserved.</p>
+    </footer>
+
 </body>
 </html>
